# recruit-rag

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/eval/: sample_qrels.json
data/sample/: jobs.csv  resumes.csv
docs/concepts/: 01_data_layer.md  02_matcher.md  03_experience_channel.md  04_dropoff_design.md
reports/: fairness_hr.json  fairness_synthetic.json  midsem_report.docx  midsem_report.md
scripts/: audit_fairness.py  audit_fairness_hr.py  demo_data_layer.py  demo_matcher.py  demo_pipeline.py  diagnose_experience.py  eval_combined_corpus.py  eval_hf_fit.py  eval_linkedin_queries.py  eval_retrieval.py  explain_dropoff.py  generate_dropoff_data.py  generate_postoffer_data.py  train_dropoff.py  train_postoffer.py  tune_dropoff.py
src/recruit/: __init__.py  config.py  skills.py
src/recruit/data/: __init__.py  loaders.py  schemas.py
src/recruit/dropoff/: drift.py  explain.py  interventions.py  jd_health.py  predict.py  schemas.py  simulation.py  train.py
src/recruit/embeddings/: __init__.py  sbert.py
src/recruit/evaluation/: ir_metrics.py  runner.py
src/recruit/explain/: llm_rag.py  templated.py
src/recruit/fairness/: audit_dropoff.py  audit_retrieval.py  proxies.py
src/recruit/postoffer/: __init__.py  explain.py  predict.py  schemas.py  simulation.py  train.py
src/recruit/retrieval/: __init__.py  bm25.py  experience.py  faiss_index.py  hybrid.py  skill_adjacency.py
src/recruit/ui/: streamlit_app.py
